Fix hamburger menu z-index

--- a/static/index.css
+++ b/static/index.css
@@ -9,7 +9,7 @@
     border: none;
     color: var(--secondary-color);
     font-size: 4em;
-    z-index: 2;
+    z-index: 3;
 }
 
 .opened-hamburger {
